<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <artifactId>vmware-cloud</artifactId>
  <groupId>org.jetbrains.teamcity</groupId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <properties>
    <teamcity.version>SNAPSHOT</teamcity.version>
    <yavijava-version>6.0.05-27</yavijava-version>
    <TeamCityDist></TeamCityDist>
    <local.repo.path>local-repo</local.repo.path>
  </properties>
    <repositories>
        <repository>
          <id>local-teamcity-artifacts</id>
          <url>file://${local.repo.path}</url>
          <snapshots>
            <enabled>false</enabled>
          </snapshots>
        </repository>
      <repository>
        <id>teamcity-space</id>
        <url>https://packages.jetbrains.team/maven/p/tc/maven</url>
      </repository>
        <repository>
            <id>TeamCity</id>
            <url>https://download.jetbrains.com/teamcity-repository/</url>
        </repository>
    </repositories>
  <pluginRepositories>
      <pluginRepository>
          <id>TeamCity</id>
          <url>https://download.jetbrains.com/teamcity-repository/</url>
      </pluginRepository>
  </pluginRepositories>
  <build>
      <pluginManagement>
          <plugins>
            <plugin>
              <groupId>org.codehaus.mojo</groupId>
              <artifactId>properties-maven-plugin</artifactId>
              <version>1.0-alpha-2</version>
              <executions>
                <execution>
                  <id>1</id>
                  <phase>initialize</phase>
                  <goals>
                    <goal>read-project-properties</goal>
                  </goals>
                  <configuration>
                    <files>
                      <file>${basedir}/cloud-vmware.properties</file>
                    </files>
                  </configuration>
                </execution>
              </executions>
            </plugin>
              <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-compiler-plugin</artifactId>
                  <version>3.14.1</version>
                  <configuration>
                      <source>1.8</source>
                      <target>1.8</target>
                  </configuration>
              </plugin>
              <plugin>
                  <groupId>org.codehaus.mojo</groupId>
                  <artifactId>license-maven-plugin</artifactId>
                  <inherited>false</inherited>
                  <version>2.4.0</version>
                  <configuration>
                      <thirdPartyFilename>third-party-libraries.json</thirdPartyFilename>
                      <fileTemplate>${maven.multiModuleProjectDirectory}/license-third-party.ftl</fileTemplate>
                      <excludedGroups>com.jetbrains.teamcity.*|org.jetbrains.teamcity.*|org.jetbrains.kotlin.*|org.jetbrains.kotlinx.*|org.jetbrains.intellij.*|com.jetbrains.intellij.*|jetbrains.ring.*</excludedGroups>
                      <excludedArtifacts>jcip-annotations</excludedArtifacts>
                      <force>true</force>
                      <includedScopes>compile,runtime</includedScopes>
                  </configuration>
              </plugin>
              <plugin>
                  <groupId>org.jetbrains.teamcity</groupId>
                  <artifactId>teamcity-sdk-maven-plugin</artifactId>
                  <version>RELEASE</version>
                  <configuration>
                       <teamcityDir>${TeamCityDist}</teamcityDir>
                  </configuration>
              </plugin>
          </plugins>
      </pluginManagement>
  </build>
  <modules>
    <module>cloud-vmware-server</module>
    <module>cloud-vmware-agent</module>
    <module>cloud-vmware-common</module>
    <module>build</module>
  </modules>

  <profiles>
    <profile>
      <id>javac-release-flag-compat</id>
      <activation>
        <jdk>[9,)</jdk>
      </activation>
      <properties>
        <maven.compiler.release>8</maven.compiler.release>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <argLine>
                -XX:+IgnoreUnrecognizedVMOptions
                --add-opens java.base/java.lang=ALL-UNNAMED
                --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                --add-opens java.base/java.util=ALL-UNNAMED
                --add-opens java.base/java.io=ALL-UNNAMED
              </argLine>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>